@@ -97,6 +97,11 @@ main(
     GSList *errlist;
     level_t *alevel;
 
+    if (argc > 1 && argv && argv[1] && g_str_equal(argv[1], "--version")) {
+	printf("selfcheck-%s\n", VERSION);
+	return (0);
+    }
+
     /* initialize */
 
     /*
