@@ -140,6 +140,11 @@ main(
     (void)argc;	/* Quiet unused parameter warning */
     (void)argv;	/* Quiet unused parameter warning */
 
+    if (argc > 1 && argv && argv[1] && g_str_equal(argv[1], "--version")) {
+	printf("sendsize-%s\n", VERSION);
+	return (0);
+    }
+
     /* initialize */
 
     /*
