@@ -85,6 +85,11 @@ main(
     char *conf_diskfile;
     disklist_t diskq;
 
+    if (argc > 1 && argv && argv[1] && g_str_equal(argv[1], "--version")) {
+	printf("amcleanupdisk-%s\n", VERSION);
+	return (0);
+    }
+
     /*
      * Configure program for internationalization:
      *   1) Only set the message locale for now.
