@@ -1303,6 +1303,11 @@ main(
     char his_hostname[MAX_HOSTNAME_LENGTH];
     char *cfg_opt = NULL;
 
+    if (argc > 1 && argv && argv[1] && g_str_equal(argv[1], "--version")) {
+	printf("amindexd-%s\n", VERSION);
+	return (0);
+    }
+
     /*
      * Configure program for internationalization:
      *   1) Only set the message locale for now.
