@@ -65,6 +65,11 @@ main(
     int dumpcycle;
     config_overrides_t *cfg_ovr = NULL;
 
+    if (argc > 1 && argv && argv[1] && g_str_equal(argv[1], "--version")) {
+	printf("amtrmlog-%s\n", VERSION);
+	return (0);
+    }
+
     /*
      * Configure program for internationalization:
      *   1) Only set the message locale for now.
