@@ -327,6 +327,11 @@ main(
     char *cfg_opt = NULL;
     int dumper_setuid;
 
+    if (argc > 1 && argv && argv[1] && g_str_equal(argv[1], "--version")) {
+	printf("dumper-%s\n", VERSION);
+	return (0);
+    }
+
     /*
      * Configure program for internationalization:
      *   1) Only set the message locale for now.
